--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
     <section class="products">
         <h1>TOO MANY OPTIONS</h1>
-        <img src="" alt="Windbreaker lineup">
+        <img src="img/945731-3840x2160-desktop-4k-matte-black-wallpaper-image.jpgz" alt="Windbreaker lineup">
     </section>
     <section class="cta">
         <h2>FREE SHIPPING</h2>
